# mappingadapter1

./: CMakeLists.txt  CMakeLists.txt.lib  README.md
cmake/: mappingadapterConfig.cmake
